# api_report

./: .env.example  .gitignore  README.md  one.py  pyproject.toml
samples/repo_with_secrets/: example.py
secret_scanner/: __init__.py  cli.py  detector.py  github_repo.py  prioritizer.py  report.py  scanner.py  servicenow.py
