[project]
name = "amrutha-secret-scanner"
version = "0.1.0"
description = "Prototype secret scanning and ServiceNow incident generation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
secret-scan = "secret_scanner.cli:main"
